# simple-simplifier

./: .gitignore  LICENSE.txt  README.md  fastapi_app.py  pyproject.toml  requirements.txt  simplify_language.ipynb
simplifier/: core.py  utils_prompts.py
