[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "simplifier"
version = "0.1.0"
description = 'Simple Simplify German Language'
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = []
authors = [
  { name = "machinelearningZH", email = "datashop@statistik.zh.ch" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/machinelearningZH/simple-simplifier#readme"
Issues = "https://github.com/machinelearningZH/simple-simplifier/issues"
Source = "https://github.com/machinelearningZH/simple-simplifier"

[tool.hatch]
version = "0.1.0"